--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -32,6 +33,7 @@
     "react-i18next": "^14.0.2",
     "react-native": "0.73.3",
     "react-native-date-picker": "^4.4.0",
+    "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -63,6 +65,7 @@
     "jest": "^29.6.3",
     "npm": "^10.4.0",
     "prettier": "2.8.8",
+    "react-devtools": "^5.3.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
