--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.2",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
